@@ -116,5 +116,12 @@ public class VDoubleParameter extends VectorParameter
 	}
 	return true;
     }
-    
+
+    /** remove i-th value from vector type parameter */
+    public Object removeValue(int i)
+    {
+    	Object result = values.remove(i);
+	isValueSet = (values.size()>0);
+	return result;
+    }
 }
