@@ -129,6 +129,14 @@ public class VEventIDParameter extends VectorParameter
 	return true;
     }
 
+    /** remove i-th value from vector type parameter */
+    public Object removeValue(int i)
+    {
+    	Object result = values.remove(i);
+	isValueSet = (values.size()>0);
+	return result;
+    }
+
 }
 
 
